--- a/package.json
+++ b/package.json
@@ -3,16 +3,8 @@
   "version": "3.10.0-quenty.0",
   "description": "Fork of jest-lua for npm consumption",
   "files": [
-    "Packages",
-    "WorkspaceStatic",
-    "bin",
-    "roblox-model",
-    "scripts",
     "src",
-    "default.project.json",
-    "jest.config.lua",
-    "jest.project.json",
-    "test-place.project.json"
+    "default.project.json"
   ],
   "scripts": {},
   "repository": {
