--- a/default.project.json
+++ b/default.project.json
@@ -1,8 +1,6 @@
 {
-  "name": "JestLua",
+  "name": "jest-lua",
   "tree": {
-    "Jest": {
-      "$path": "DevPackages"
-    }
+    "$path": "DevPackages"
   }
 }
